# TensorKiko

./: .gitignore  DEV.md  LICENSE  MANIFEST.in  README.md  RELEASEINSTRUCTIONS.md  pyproject.toml  requirements.txt  setup.py  visualize.py
.github/workflows/: release.yml
homebrew/: tensorkiko.rb
notebooks/: ckpt_investigate.ipynb
tensorkiko/: __init__.py  convert_ckpt_st.py  loader_test.py  requirements.txt  styles.css  tensor_processing.py  visualize.py
tensorkiko/modules/: ascii_logo.py  convert_ckpt_st.py  model_loader.py  tensor_processing.py
tensorkiko/static/css/: styles.css
tensorkiko/static/js/: scripts.js
tensorkiko/static/templates/: index.html
tests/: loader_test.py  process_test.py
